# tradepilot

./: .gitignore  BUILD.md  PER_15_MINUTE_SCORING.md  PER_15_MINUTE_SCORING_PATCH.md  PER_2_MINUTE_SCORING.md  PER_MINUTE_SCORING.md  README.md  could-you-check-build-md-wild-whistle.md  pyproject.toml  requirements.txt  run.sh
api/: __init__.py  server.py
configs/: intraday_1m.json  intraday_5m.json  intraday_5m_relaxed.json  intraday_5m_wide.json  watchlist.json  wide_yfinance.json
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.test.tsx  App.tsx  api.ts  format.ts  main.tsx  migrateStorage.ts  quoteStream.ts  styles.css  test-setup.ts  types.ts  useBrokerData.ts  useCountdown.ts  useRealtimeQuote.ts  useResultFilters.ts  useWarnings.ts
scanner/: __init__.py  alerts.py  backtest.py  config.py  diagnostics.py  engine.py  indicators.py  sector_rotation.py  signals.py  tuning.py
scanner/broker/: __init__.py  connections.py  ib_broker.py  journal.py  state.py
scanner/data/: __init__.py  base.py  cache.py  etf_holdings.py  ib_provider.py  polygon_provider.py  polygon_quotes.py  synthetic_provider.py  yfinance_provider.py
scanner/scoring/: __init__.py  aggregator.py  (+15 more)
scripts/: fetch_test_fixtures.py  refresh_sector_holdings.py  run_backtest.py  run_scan.py  run_tuning.py
tests/: conftest.py  test_alerts.py  test_backtest.py  test_broker.py  test_data.py  test_engine.py  test_etf_holdings.py  test_ib_provider.py  test_indicators.py  test_journal.py  test_polygon_provider.py  test_polygon_quotes.py  test_signals.py  test_tuning.py
(+49 files in other folders)
