[project]
name = "bullish_scanner"
version = "0.1.0"
description = "Bullish stock scanner + backtester + dashboard for day traders."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "dashboard", "output", "data_cache"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "C4", "SIM"]
ignore = ["E501"]  # let formatter handle lines

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "N"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["scanner"]
plugins = ["pydantic.mypy"]
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["yfinance.*", "pyarrow.*", "ib_async.*", "alpaca.*"]
ignore_missing_imports = true
disable_error_code = ["no-untyped-call", "no-any-return"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["scanner"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
